Added Wave effects to fade in fade out

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -838,6 +838,8 @@
                     PositionSeconds="{Binding PositionSeconds}"
                     SelectionStartSeconds="{Binding SelectionStartSeconds}"
                     SelectionEndSeconds="{Binding SelectionEndSeconds}"
+                    FadeInSeconds="{Binding Effects.FadeInSeconds}"
+                    FadeOutSeconds="{Binding Effects.FadeOutSeconds}"
                     AccentBrush="{DynamicResource WaveAccent}"
                     SelectionBrush="{DynamicResource WaveSelection}"
                     BackgroundBrush="{DynamicResource WaveBg}"
@@ -1194,10 +1196,12 @@
                                     <Slider Grid.Column="0"
                                             Minimum="0" Maximum="2"
                                             Value="{Binding Effects.FadeInSeconds}"
-                                            TickFrequency="0.1"
+                                            TickFrequency="0.01"
+                                            SmallChange="0.01"
+                                            LargeChange="0.1"
                                             VerticalAlignment="Center"/>
                                     <TextBlock Grid.Column="1"
-                                               Text="{Binding Effects.FadeInSeconds, StringFormat={}{0:0.0}s}"
+                                               Text="{Binding Effects.FadeInSeconds, StringFormat={}{0:0.00}s}"
                                                Foreground="{DynamicResource Text1}"
                                                FontSize="10"
                                                VerticalAlignment="Center"
@@ -1216,10 +1220,12 @@
                                     <Slider Grid.Column="0"
                                             Minimum="0" Maximum="2"
                                             Value="{Binding Effects.FadeOutSeconds}"
-                                            TickFrequency="0.1"
+                                            TickFrequency="0.01"
+                                            SmallChange="0.01"
+                                            LargeChange="0.1"
                                             VerticalAlignment="Center"/>
                                     <TextBlock Grid.Column="1"
-                                               Text="{Binding Effects.FadeOutSeconds, StringFormat={}{0:0.0}s}"
+                                               Text="{Binding Effects.FadeOutSeconds, StringFormat={}{0:0.00}s}"
                                                Foreground="{DynamicResource Text1}"
                                                FontSize="10"
                                                VerticalAlignment="Center"
